Add CentOS 7 base and updates repos, epel and mechanism to import gpg keys

--- a/data/paxdb/repo/os/CentOS/7/e.yaml
+++ b/data/paxdb/repo/os/CentOS/7/e.yaml
@@ -1,4 +1,15 @@
 pax::repo:
+  epel:
+    resource: yumrepo
+    params:
+      enabled: true
+      enable_baseurl: "%{hiera('pax::defaults.repo.yumrepo.enable_baseurl')}"
+      baseurl: "%{hiera('pax::defaults.repo.yumrepo.baseurl')}/$releasever/epel/$basearch/"
+      metalink: "https://mirrors.fedoraproject.org/metalink?repo=epel-$releasever&arch=$basearch"
+      descr: Extra Packages for Enterprise Linux $releasever - $basearch
+      gpgcheck: 1
+      gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-%{::pax::repo_helpers::el::releasever}
+    repotrust: RPM-GPG-KEY-EPEL-%{::pax::repo_helpers::el::releasever}
   extras:
     resource: yumrepo
     params:
